# zx-spectrum-emulator

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: emulator.rs  lib.rs  main.cpp  main.rs  memory.cpp  memory.h  z80.cpp  z80.h  zxspectrum.cpp  zxspectrum.h
src/cpu/: dd_instructions.rs  ed_instructions.rs  fd_instructions.rs  instructions.rs  mod.rs  registers.rs
src/memory/: mod.rs  rom.rs
src/video/: mod.rs
